--- a/index.html
+++ b/index.html
@@ -1,68 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="reset.css" />
-		<link rel="stylesheet" href="style.css" />
-		<title>WKP7</title>
-	</head>
-	<body>
-		<header class="heading">
-			<h1>Onja Labrary</h1>
-		</header>
-		<main>
-			<h2>Labrary</h2>
-			<div class="container">
-				<h3>Add a book</h3>
-				<form action="">
-					<div>
-						<label for="title">Book title</label>
-						<input type="text" id="title">
-					</div>
-					<div>
-						<label for="author">Book author</label>
-						<input type="text" id="author">
-					</div>
-					<div>
-						<label for="genre">Book genre</label>
-						<select name="genre" id="genre">
-							<option value="design">Design</option>
-							<option value="fantasy">Fantasy</option>
-							<option value="fiction">Fiction</option>
-							<option value="memoirs">Memoirs</option>
-							<option value="mistry">Mistery</option>
-							<option value="non-fiction">Non-fiction</option>
-							<option value="romantic">Romantic</option>
-							<option value="thriller">Thriller</option>
-						</select>
-					</div>
-					<div>
-						<label for="numbers">Book pages</label>
-						<input type="number" id="numbers">
-					</div>
-					<div>
-						<label for="status">Status</label>
-						<select name="status" id="status">
-							<option value="read">Read</option>
-							<option value="not yet">Not yet read</option>
-						</select>
-					</div>
-					<button type="submit" class="addbtn">Add</button>
-				</form>
-			</div>
-			<div class="container second">
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="reset.css" />
+	<link rel="stylesheet" href="style.css" />
+	<title>WKP7</title>
+</head>
+
+<body>
+	<header class="heading">
+		<h1>Onja Labrary</h1>
+	</header>
+	<main>
+		<h2>Labrary</h2>
+		<div class="container">
+			<h3>Add a book</h3>
+			<form class="book_form">
+				<div>
+					<label for="title">Book title</label>
+					<input class="form_input" type="text" name="title" id="title">
+				</div>
+				<div>
+					<label for="author">Book author</label>
+					<input class="form_input" type="text" name="author" id="author">
+				</div>
+				<div>
+					<label for="genre">Book genre</label>
+					<select name="genre" id="genre">
+						<option value="design">Design</option>
+						<option value="fantasy">Fantasy</option>
+						<option value="fiction">Fiction</option>
+						<option value="memoirs">Memoirs</option>
+						<option value="mistry">Mistery</option>
+						<option value="non-fiction">Non-fiction</option>
+						<option value="romantic">Romantic</option>
+						<option value="thriller">Thriller</option>
+					</select>
+				</div>
+				<div>
+					<label for="numbers">Book pages</label>
+					<input class="form_input" type="number" name="numbers" id="numbers">
+				</div>
+				<div>
+					<label for="status">Status</label>
+					<select name="status" id="status">
+						<option value="read">Read</option>
+						<option value="not yet">Not yet read</option>
+					</select>
+				</div>
+				<button type="submit" class="addbtn">Add</button>
+			</form>
+		</div>
+			<div class="second">
 				<h4>Title</h4>
 				<h4>Author</h4>
 				<h4>Genre</h4>
 				<h4>Pages</h4>
 				<h4>Read</h4>
-				<h4>Delete</h4>
+			</div>
+			<div>
 				<ul class="book_list">
 
 				</ul>
 			</div>
-		</main>
-		<script src="script.js"></script>
-	</body>
+	</main>
+	<script src="script.js"></script>
+</body>
+
 </html>
