Adding new list of book

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 			<form class="book_form">
 				<div>
 					<label for="title">Book title</label>
-					<input class="form_input" type="text" name="title" id="title">
+					<input class="form_input" type="text" name="title" id="title" required>
 				</div>
 				<div>
 					<label for="author">Book author</label>
-					<input class="form_input" type="text" name="author" id="author">
+					<input class="form_input" type="text" name="author" id="author" required>
 				</div>
 				<div>
 					<label for="genre">Book genre</label>
@@ -41,7 +41,7 @@
 				</div>
 				<div>
 					<label for="numbers">Book pages</label>
-					<input class="form_input" type="number" name="numbers" id="numbers">
+					<input class="form_input" type="number" name="numbers" id="numbers" required>
 				</div>
 				<div>
 					<label for="status">Status</label>
